--- a/chat/pubspec.yaml
+++ b/chat/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image_picker: ^0.8.5+3
+  provider: ^6.0.3
+  cloud_firestore: ^3.4.3
+  firebase_auth: ^3.6.2
+  firebase_storage: ^10.3.4
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/avatar.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
