--- a/chat/pubspec.yaml
+++ b/chat/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^3.4.3
   firebase_auth: ^3.6.2
   firebase_storage: ^10.3.4
+  firebase_messaging: ^12.0.1
 
 dev_dependencies:
   flutter_test:
